--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,13 @@
         cursor: pointer;
         font-size: 18px;
         font-weight: bold;
+        transition: transform 0.4s, background-color 0.5s; 
+
+        &:hover {
+            transform: translateY(-10px);
+            background: $purple-hover;
+        }
+
         
       }
 }
@@ -43,8 +50,6 @@
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
     width: 100%; 
     padding: 20px;
-
-    
     h3 {
         font-size: 25px;
     }
@@ -81,6 +86,7 @@ footer {
     padding: 10px;
     display: flex;
     justify-content: flex-start;
+    
     .footer-column {
         display: flex;
         flex-direction: column;
